remove a silly java 9 dependency